# perf-examples

./: Cargo.toml  justfile
src/: lib.rs
